add_definitions(-std=gnu99 -fgnu89-inline)
#add parameter here as SET(testname_param arg1 arg2 ...)
SET(default_param 1 8 10000)
SET(zs_multi_test_param -s 1 -t 8 -i 1000)
SET(zs_mput_param 1000 100 10)

file( GLOB TEST_SOURCES *.c )
foreach( test_src_file ${TEST_SOURCES} )
	IF(NOT ${test_src_file} MATCHES "/test.c")
		get_filename_component(testname ${test_src_file} NAME_WE)
		add_executable(${testname} ${test_src_file} test.c)
		add_executable(${testname}_btree ${test_src_file} test.c)
		add_dependencies(${testname} zs)

		#add_executable(${testname}_btree ${test_src_file} test.c)
		#set_property(TARGET ${testname}_btree PROPERTY COMPILE_DEFINITIONS BTREE_MODE)
		#add_dependencies(${testname}_btree zs)

        IF(NOT ${testname}_param)
            #MESSAGE(param is  ${default_param})
		    add_test(${testname} ${CMAKE_CURRENT_BINARY_DIR}/${testname} ${default_param})
		    add_test(${testname}_btree ${CMAKE_CURRENT_BINARY_DIR}/${testname}_btree ${default_param})
        ELSE(NOT ${testname}_param)
            #MESSAGE(param is  ${${testname}_param})
		    add_test(${testname} ${CMAKE_CURRENT_BINARY_DIR}/${testname} ${${testname}_param})
		    add_test(${testname}_btree ${CMAKE_CURRENT_BINARY_DIR}/${testname}_btree ${${testname}_param})
        ENDIF(NOT ${testname}_param)
		target_link_libraries( ${testname} zsdll dl pthread aio event snappy)
		#target_link_libraries( ${testname}_btree zsdll dl pthread aio event snappy)
		target_link_libraries( ${testname}_btree zsdll dl pthread aio event snappy)
	ENDIF(NOT ${test_src_file} MATCHES "/test.c")
endforeach(test_src_file ${TEST_SOURCES})
